# C_Exam

./: CMakeLists.txt  exam-02-01-variable.c  exam-02-02variable-type.c  exam-04-01-printf.c  exam-04-02-scantf.c  exam-05-01-operator.c  exam-06-01-operator2.c
