cmake_minimum_required(VERSION 3.22)
project(Day01 C)

set(CMAKE_C_STANDARD 99)

add_executable(exam-04-02-scantf exam-04-02-scantf.c)
add_executable(exam-04-01-printf exam-04-01-printf.c)
add_executable(exam-01-hello exam-01-hello.c)
add_executable(exam-02-01-variable exam-02-01-variable.c)
add_executable(exam-02-02variable-type exam-02-02variable-type.c)
add_executable(exam-06-01-operator2 exam-06-01-operator2.c)
add_executable(exam-05-01-operator exam-05-01-operator.c)